--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 /.github/CODEOWNERS @SamuelPasierb
-* @artjom2281337 @Evelyn-PA @SamuelPasierb
+* @artjom2281337 @Evelyn-PA @SamuelPasierb @SanduPalii
